[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/left_arrow.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/up_arrow_key.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/right_arrow.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/down_arrow.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/panel_brown.png" type="Texture" id=5]
[ext_resource path="res://UI_Scenes/ArrowKeys.gd" type="Script" id=6]

[node name="ArrowKeys" type="Node2D"]
position = Vector2( 330, 130 )
script = ExtResource( 6 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( -2.5, 96.4056 )
scale = Vector2( 0.815789, 0.811268 )
texture = ExtResource( 5 )

[node name="UpArrow" type="Sprite" parent="."]
unique_name_in_owner = true
position = Vector2( 0, 40 )
texture = ExtResource( 2 )

[node name="DownArrow" type="Sprite" parent="."]
unique_name_in_owner = true
position = Vector2( 0, 150 )
texture = ExtResource( 4 )

[node name="RightArrow" type="Sprite" parent="."]
unique_name_in_owner = true
position = Vector2( 110, 150 )
texture = ExtResource( 3 )

[node name="LeftArrow" type="Sprite" parent="."]
unique_name_in_owner = true
position = Vector2( -120, 150 )
texture = ExtResource( 1 )
